# django-expensor

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  Procfile  README.md  decorators.py  docker-compose.production.yml  docker-compose.yml  example.env  gunicorn.conf.py  manage.py  nginx.conf  production.yml  pyproject.toml  requirements.txt
account/: forms.py  models.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_change_ids_to_big_autofield_dj42.py  (+1 more)
expense/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
expensor/: celery.py  common.py  old_settings.py  settings.py  urls.py  wsgi.py
income/: forms.py  models.py  tests.py  urls.py  views.py
requirements/: base.txt  development.txt
templates/: 400.html  403.html  404.html  500.html  account_form.html  account_name_amount.html  account_name_list.html  add_expense.html  add_income.html  base.html  css_files.html  day-expense.html  entity-delete.html  expense_list.html  expense_search.html  expense_table.html  goto.html  income-search.html  income_list.html  investment-entity-create.html  investment-entity-delete.html  investment-entity-list.html  js_files.html  messages.html  month-expense.html  month-income.html  navbar.html  networth.html  networth_history.html  networth_x.html  paginator.html  remark-month-expense.html  remark-wise-expenses.html  report.html  savings-calculation-detail.html  savings-calculation.html  savings-calculator.html  search.html  source-wise-income.html  table.html  (+5 more)
utils/: base_model.py  constants.py  context_processors.py  helpers.py
(+62 files in other folders)
